Java 11에서 지원하는 stream->list 메서드로 변경(#64)