@@ -98,7 +98,7 @@ public class MessageService {
             messageRoom -> messageRepository.findTop1ByMessageRoomOrderByCreatedDateDesc(
                 messageRoom)).collect(Collectors.toList());
 
-        List<String> messageTypeList = messageRoomList.stream().map(messageRoom -> (MessageRoomType.of(messageRoom.getOffer().getOfferer().getId() == memberId))).toList();
+        List<String> messageTypeList = messageRoomList.stream().map(messageRoom -> (MessageRoomType.of(messageRoom.getOffer().getOfferer().getId() == memberId))).collect(Collectors.toList());
 
         long numMessageRoom = messageRoomRepository.countMessageRoomByMember(me);
 
